tests/compile-fail/fs/close_stdout.stderr
error: unsupported operation: stdout cannot be closed
  --> $DIR/close_stdout.rs:12:9
   |
LL |         libc::close(1); //~ ERROR stdout cannot be closed
   |         ^^^^^^^^^^^^^^ stdout cannot be closed
   |
   = help: this is likely not a bug in the program; it indicates that the program performed an operation that the interpreter does not support
           
   = note: inside `main` at $DIR/close_stdout.rs:12:9

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

